<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bogdancristian.tictactoe.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:background="@drawable/picture">


        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSound"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="79dp"
            android:width="200dp"
            android:background="@color/Gold"
            android:fontFamily="@font/annie_use_your_telescope"
            android:onClick="openGrid1"
            android:text="@string/btnOne"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="@string/btnOne" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnOne"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:width="200dp"
            android:background="@color/Gold"
            android:fontFamily="@font/annie_use_your_telescope"
            android:onClick="openGrid2"
            android:text="@string/btnTwo"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="@string/btnTwo" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_below="@+id/btnTwo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:width="250dp"
            android:background="@color/Gold"
            android:fontFamily="@font/annie_use_your_telescope"
            android:onClick="closeAplication"
            android:text="@string/exit"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="@string/exit" />

        <ImageButton
            android:id="@+id/btnSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="23dp"
            android:layout_toLeftOf="@+id/btnOne"
            android:layout_toStartOf="@+id/btnOne"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:srcCompat="@drawable/on" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
