<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bogdancristian.tictactoe.GridActivity">

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="566dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">



        <TableLayout
            android:id="@+id/Grid"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#4da64d"
            android:keepScreenOn="true">

            <TableRow
                android:id="@+id/Row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/cell11"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="cellClick"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell12"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="cellClick"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell13"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="cellClick"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/Row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/cell21"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="cellClick"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell22"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="cellClick"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell23"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="cellClick"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/Row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/cell11"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="cellClick"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell12"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="cellClick"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cell13"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="cellClick"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/MidnightBlue">
            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_X"
                    android:textColor="@color/White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/X"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radio_O"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/O"
                    android:textColor="@color/White"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>
            <TextView
                android:id="@+id/Reset"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/reset"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:gravity="center"
                android:onClick="resetClick"
                android:clickable="true"/>
            <TextView
                android:id="@+id/thing"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textSize="20sp"
                android:gravity="center"/>



        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
